--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -1,21 +1,3 @@
-:root {
-  --primary-color: #f57c00;
-  --secondary-color: green;
-  --background-color: #f8feed;
-  --text-color: #2c2c2c;
-  --error-color: #faf0f0;
-}
-
-
-body, html {
-  height: 100%;
-  width: 100%;
-  font-family: "Poppins", sans-serif;
-  background-color: var(--background-color);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
 /* Main Layout */
 .login-container {
@@ -207,10 +189,10 @@ body, html {
 /* Responsive Design */
 @media (max-width: 900px) {
   .login-container {
-    flex-direction: column;
-    height: auto;
-    width: 100%;
-  }
+      margin: 0 auto;
+      margin-top: 20px;
+      margin-bottom: 20px;
+ }
 /* Main Layout */
 .login-container {
   display: flex;
@@ -218,7 +200,7 @@ body, html {
   height: 100vh;
   background: #fff;
   border-radius: 100px;
-  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0 10px green;
   overflow: hidden;
 }
 
