--- a/src/components/RecipeCard.css
+++ b/src/components/RecipeCard.css
@@ -51,8 +51,8 @@
 /* Three-dot menu */
 .menu-container {
   position: absolute;
-  right: 24px;
-  top: 24px;
+  right: -8px;
+  top: 8px
 }
 
 .menu-button {
@@ -61,9 +61,9 @@
   cursor: pointer;
   font-size: 1rem;
   padding: 5px;
-  color: white;
-  background-color: #2c3e5061;
   border-radius: 50px;
+   font-weight: 900;
+
 }
 
 .menu-dropdown {
@@ -76,6 +76,9 @@
   border-radius: 5px;
   z-index: 100;
   min-width: 120px;
+}
+.menu-button:hover{
+  background-color: rgb(226, 222, 222);
 }
 
 .menu-item {
@@ -101,6 +104,7 @@
   color: #d9534f;
 }
 
+.menu-item.save 
 
 
 .menu-item.delete:hover {
