--- a/src/components/Register.css
+++ b/src/components/Register.css
@@ -1,26 +1,3 @@
-:root {
-  --primary-color: #f57c00;
-  --secondary-color: #30d1b4;
-  --background-color: #f8feed;
-  --text-color: #2c2c2c;
-  --error-color: #da8989;;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body, html {
-  height: 100%;
-  width: 100%;
-  font-family: "Poppins", sans-serif;
-  background-color: var(--background-color);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
 /* Main Layout */
 .register-container {
@@ -28,7 +5,7 @@ body, html {
   width: 100vw;
   height: 100vh;
   background: #fff;
-  border-radius: 100px;
+  border-radius:100px;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
   overflow: hidden;  
 }
@@ -253,8 +230,11 @@ body, html {
 @media (max-width: 900px) {
   .register-container {
     flex-direction: column;
-    height: auto;
-    width: 90%;
+    box-shadow: 0px 0px 10px green;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    height: 100%;
+  
   }
 
   .register-image-section {
