--- a/src/components/Toast.css
+++ b/src/components/Toast.css
@@ -19,7 +19,7 @@
   .toast {
     background-color: #323232;
     color: #fff;
-    padding: 10px 20px;
+    padding: 14px 24px;
     border-radius: 5px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     opacity: 0;
@@ -80,6 +80,6 @@
   
   /* Toast for Info */
   .toast-info {
-    background-color: #2196f3;
+    background-color: #bbd5ef;
   }
   
