--- a/src/pages/AboutPage.css
+++ b/src/pages/AboutPage.css
@@ -1,25 +1,20 @@
 .about-page {
-  padding-top: 180px;
-  margin-top: 180px;
-  display: flex;
+ display: flex;
   flex-direction: column;
-  min-height: 100vh;
-  background-color: #fffaf5;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: #333;
 }
 
 .about-container {
   max-width: 100vw;
   margin: 0 auto;
-  padding: 4rem 3rem;
+  padding: 20px;
   flex: 1;
 }
 
 .about-header h1 {
   font-size: 2.5rem;
   text-align: center;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
   color: green
    
 }
@@ -67,28 +62,20 @@
 
 /* Very small devices (max-width: 480px) */
 @media (max-width: 769px) {
-  .about-page {
-    margin-top: 330px;
-  }
-
   .about-header h1 {
-    font-size: 2rem; /* Slightly smaller font size for mobile */
-  }
-
-  .about-container {
-    padding: 2rem 1.5rem; /* Reduced padding on smaller screens */
+    font-size: 2rem;
   }
 
   .about-content h2 {
-    font-size: 1.6rem; /* Adjusted font size for headings */
+    font-size: 1.6rem;
   }
 
   .about-content h3 {
-    font-size: 1.2rem; /* Adjusted font size for subheadings */
+    font-size: 1.2rem;
   }
 
   .about-content p,
   .about-content ul li {
-    font-size: 0.9rem; /* Reduced font size for smaller screens */
+    font-size: 0.9rem;
   }
 }
