--- a/src/pages/SavedRecipes.css
+++ b/src/pages/SavedRecipes.css
@@ -1,11 +1,11 @@
 
 /* Saved Recipes Container */
 .saved-recipes-container {
-  padding: var(--padding);
-  max-width: var(--max-width);
-  margin-top: 4rem;
-  background-color: var(--bg-light);
-  min-height: calc(100vh - var(--navbar-height));
+  margin-top: 2rem;
+  margin-bottom: 40px;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 /* Header */
@@ -58,7 +58,7 @@ h2 {
 /* Recipe Content */
 .recipe-image {
   width: 100%;
-  height: 12.5rem; /* 200px */
+  height: 12.5rem;
   object-fit: cover;
 }
 
@@ -66,7 +66,7 @@ h2 {
   margin: 1rem;
   font-size: 1.25rem;
   font-weight: 600;
-  color: var(--secondary-color);
+  color: var(--primary-color);
 }
 .saved-recipe-item p {
   margin: 0 1rem 1rem;
@@ -144,15 +144,15 @@ h2 {
   background-color: var(--pagination-disabled-bg);
   cursor: not-allowed;
 }
+.empty {
+  text-align: center;
+  color: rgb(109, 144, 247);
+}
 
 /* MEDIA QUERIES */
 
 /* Tablet and below (≤768px) */
 @media (max-width: 768px) {
-  .saved-recipes-container {
-    margin-top: 650px;
-  }
-
   .recipe-image {
     height: 10rem;
   }
