--- a/src/pages/LandingPage.css
+++ b/src/pages/LandingPage.css
@@ -171,3 +171,21 @@
   color: #ff623d;
   margin-bottom: 15px;
 }
+
+
+@media screen and (max-width: 789px) {
+  
+.section-title {
+  font-size: 22px;
+}
+
+
+.hero h1 {
+  font-size: 24px;
+}
+.cta-btn{
+  width: 100%;
+
+}
+
+}
