Improve Home page accessibility

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -27,7 +27,7 @@ footer {
 
 .footer-links a:hover,
 .footer-links a:focus {
-  color: #ff7f50; /* coral color */
+  color: #ff7f50;
   outline: none;
 }
 
