--- a/src/components/HowToTips.css
+++ b/src/components/HowToTips.css
@@ -1,14 +1,14 @@
 .how-to-tips {
   padding: 50px 20px;
-  border: 2px solid var(--secondary-color);
-  margin: 40px;
-  border-radius: 50px;
-  background-color: #fffdf4;
+  width: 100vw;
+  background-color: #e06700;
+  border-top-right-radius: 20px;
+  border-top-left-radius: 20px;
 }
 
 .how-to-tips h2 {
   font-size: 28px;
-  color: var(--secondary-color);
+  color: white;
   text-align: center;
   margin-bottom: 30px;
 }
@@ -54,7 +54,7 @@
 .tip-card h3 {
   font-size: 15px;
   margin-bottom: 6px;
-  color: #e06700;
+  color:  var(--secondary-color);;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -62,7 +62,7 @@
 
 .tip-card p {
   font-size: 13px;
-  color: #444;
+  color: #161616;
   line-height: 1.3;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -74,9 +74,8 @@
 /* Scrollable Tips on Small Screens */
 @media screen and (max-width: 768px) {
    .how-to-tips {
-    padding: 30px 10px;
-    margin: 20px 10px;
-    border-radius: 20px;
+    padding: 30px 0;
+  
   }
 
   .tips-container {
@@ -119,3 +118,5 @@
     scrollbar-width: none;
   }
 }
+
+
