--- a/src/pages/AboutPage.css
+++ b/src/pages/AboutPage.css
@@ -2,6 +2,8 @@
  display: flex;
   flex-direction: column;
   color: #333;
+  max-width: 900px;
+  margin: 0 auto;
 }
 
 .about-container {
@@ -14,8 +16,9 @@
 .about-header h1 {
   font-size: 2.5rem;
   text-align: center;
-  margin-bottom: 1rem;
-  color: green
+  margin-bottom: 1.2rem;
+  color: green;
+   margin-top: 1rem;
    
 }
 
@@ -26,8 +29,8 @@
 }
 
 .about-content h3 {
-  margin-top: 2rem;
-  margin-bottom: 0.5rem;
+  margin-bottom: 1.5rem;
+  margin-top: 4rem;
   color: #ff8c42;;
   font-size: 1.4rem;
 }
@@ -58,6 +61,9 @@
 
 .about-content a:hover {
   color: rgb(10, 85, 10);
+}
+.about-container .last {
+  margin-bottom: 100px;
 }
 
 /* Very small devices (max-width: 480px) */
