--- a/src/pages/RecipeFormPage.css
+++ b/src/pages/RecipeFormPage.css
@@ -30,7 +30,6 @@
 .create-recipe-form h2 {
   text-align: center;
   font-size: 2rem;
-  margin-bottom: 1.5rem;
   font-weight: bold;
   color: var(--color-text);
 }
@@ -97,6 +96,7 @@
   margin-right: 0.5rem;
   margin-bottom: 0.5rem;
   border-radius: 20px;
+  
 }
 
 .ingredient-list .remove-ingredient-button {
@@ -104,6 +104,7 @@
   margin-right: 0;
   cursor: pointer;
   background: none;
+  color: #333;
   border: 2px solid var(--primary-color);
   padding: 5px;
 }
@@ -117,8 +118,8 @@
   cursor: pointer;
 }
 
-.add-ingredient-button:hover {
-  background-color: var(--color-add-btn-hover);
+.add-ingredient-button:hover , .remove-ingredient-button{
+  opacity: 0.8;
 }
 
 /* Modal Styles */
@@ -170,8 +171,8 @@ label img {
   border: 4px solid #f3f3f3;
   border-top: 4px solid #f97316;
   border-radius: 50%;
-  width: 36px;
-  height: 36px;
+  width: 200px;
+  height: 200px;
   animation: spin 1s linear infinite;
   margin: 0 auto;
 }
@@ -179,6 +180,16 @@ label img {
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
+}
+
+.submit {
+  font-weight: bold;
+}
+.submit:active {
+  color: white;
+}
+.submit:hover {
+  opacity: 0.8
 }
 
 
